--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,11 @@ language: c
 compiler:
   - clang
   - gcc
+virtualenv:
+  system_site_packages: true
+addons:
+  apt:
+    packages:
+     - libgtest-dev
+
 script: make test
