proper gtest install for CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-language: c
+language: cpp
 compiler:
   - clang
   - gcc
@@ -8,5 +8,8 @@ addons:
   apt:
     packages:
      - libgtest-dev
-
+     - avr-libc
+     - gcc-avr
+before_install:
+  - "cd /usr/src/gtest && sudo cmake . && sudo cmake --build . && sudo mv libg* /usr/local/lib/ ; cd -"
 script: make test
